force-app/main/default/objects/FEC_Customer_History__c/FEC_Customer_History__c.object-meta.xml
<CustomObject>
    <label>Customer History</label>
    <nameField>
        <label>Customer History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>