force-app/main/default/objects/FEC_Customer_History__c/fields/ArchiveExternalId__c.field-meta.xml
<CustomField>
    <fullName>ArchiveExternalId__c</fullName>
    <label>Archive External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>