force-app/main/default/objects/FEC_Customer_History__c/fields/Close_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Close_Fee_Amount__c</fullName>
    <description>Số tiền phí tất toán
Formula = Close Fee * Current Balance</description>
    <label>Close Fee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>