force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Account_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Close_Date__c</fullName>
    <description>Ngày đóng tài khoản</description>
    <label>Account Close Date</label>
    <type>Date</type>
</CustomField>