force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Number__c</fullName>
    <description>Số tài khoản</description>
    <inlineHelpText>Số TK khách hàng</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>