force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Account_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Open_Date__c</fullName>
    <description>Ngày mở tài khoản</description>
    <label>Account Open Date</label>
    <type>Date</type>
</CustomField>