force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Status__c</fullName>
    <description>Tình trạng tài khoản</description>
    <inlineHelpText>Status KH</inlineHelpText>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>