force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Account_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Status_Change_Date__c</fullName>
    <description>Ngày thay đổi trạng thái</description>
    <label>Account Status Change Date</label>
    <type>Date</type>
</CustomField>