force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Address_Type__c</fullName>
    <description>Loại địa chỉ</description>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>