force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Agreement_Date__c</fullName>
    <description>Ngày hợp đồng</description>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>