force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Annual_Fee__c</fullName>
    <description>Phí thường niên</description>
    <label>Annual Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>