force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_API_Cache__c.field-meta.xml
<CustomField>
    <fullName>FEC_API_Cache__c</fullName>
    <description>Store API JSON cache</description>
    <inlineHelpText>Cache API response to avoid multiple callouts</inlineHelpText>
    <label>API Cache</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>