force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_API_Cache_Secondary_Demo__c.field-meta.xml
<CustomField>
    <fullName>FEC_API_Cache_Secondary_Demo__c</fullName>
    <label>API Cache Secondary Demo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>