force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Application_ID__c</fullName>
    <description>Mã hồ sơ</description>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>