force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Applied_LPI__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applied_LPI__c</fullName>
    <label>Applied LPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>