force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Available_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>FEC_Available_Credit_Limit__c</fullName>
    <description>Hạn mức khả dụng</description>
    <label>Available Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>