force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Available_Points__c.field-meta.xml
<CustomField>
    <fullName>FEC_Available_Points__c</fullName>
    <description>Điểm thưởng khả dụng</description>
    <label>Available Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>