force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Beneficiary_Account__c.field-meta.xml
<CustomField>
    <fullName>FEC_Beneficiary_Account__c</fullName>
    <label>Beneficiary Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>