force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Block_Code_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Block_Code_2__c</fullName>
    <description>Tình trạng khóa thẻ 2</description>
    <label>Block Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>