force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Block_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Block_Code__c</fullName>
    <description>Tình trạng khóa thẻ</description>
    <label>Block Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>