force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Block_Date_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Block_Date_1__c</fullName>
    <description>Ngày khóa thẻ 1</description>
    <label>Block Date 1</label>
    <type>Date</type>
</CustomField>