force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Block_Date_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Block_Date_2__c</fullName>
    <description>Ngày khóa thẻ 2</description>
    <label>Block Date 2</label>
    <type>Date</type>
</CustomField>