force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Block_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Block_Date__c</fullName>
    <description>Ngày khóa thẻ</description>
    <label>Block Date</label>
    <type>Date</type>
</CustomField>