force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Blocked_By__c</fullName>
    <description>Khóa thẻ bởi</description>
    <label>Blocked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>