force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Branch_Name__c</fullName>
    <description>Chi nhánh ngân hành thụ hưởng</description>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>