force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Buyer_DOB__c.field-meta.xml
<CustomField>
    <fullName>FEC_Buyer_DOB__c</fullName>
    <description>Ngày sinh</description>
    <label>Buyer DOB</label>
    <type>Date</type>
</CustomField>