force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Cancel_Date__c</fullName>
    <description>Ngày hủy hợp đồng</description>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>