force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Card_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Activation_Date__c</fullName>
    <description>Ngày kích hoạt thẻ</description>
    <label>Card Activation Date</label>
    <type>Date</type>
</CustomField>