force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Card_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Activation_Status__c</fullName>
    <description>Trạng thái kích hoạt thẻ</description>
    <label>Card Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_Inactive</valueSetName>
    </valueSet>
</CustomField>