force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Number__c</fullName>
    <description>Số thẻ</description>
    <label>Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>