force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Type__c</fullName>
    <description>Loại thẻ</description>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Card_Type</valueSetName>
    </valueSet>
</CustomField>