force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_CC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_CC_Code__c</fullName>
    <description>Mã CC</description>
    <label>CC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>