force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_CC_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_CC_Name__c</fullName>
    <description>Tên CC</description>
    <label>CC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>