force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Charge_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Charge_Off_Date__c</fullName>
    <description>Ngày chuyển charge-off</description>
    <label>Charge Off Date</label>
    <type>Date</type>
</CustomField>