force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Company_Name__c</fullName>
    <description>Công ty bán nợ</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>