force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closed_Active_Charge_Off</valueSetName>
    </valueSet>
</CustomField>