force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Type__c</fullName>
    <description>Loại hợp đồng</description>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>