force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>FEC_Credit_Limit__c</fullName>
    <description>Hạn mức tín dụng</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>