force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Current_Balance_Principal__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Balance_Principal__c</fullName>
    <description>Nợ gốc hiện tại</description>
    <label>Current Balance Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>