force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Name__c</fullName>
    <description>Họ và Tên</description>
    <inlineHelpText></inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>