force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Segment__c</fullName>
    <description>Phân khúc khách hàng</description>
    <label>Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>