force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Type__c</fullName>
    <description>Loại khách hàng</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Type</valueSetName>
    </valueSet>
</CustomField>