force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Daily_Cash_Limit__c.field-meta.xml
<CustomField>
    <fullName>FEC_Daily_Cash_Limit__c</fullName>
    <description>Hạn mức rút tiền mặt/ngày</description>
    <label>Daily Cash Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>