force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Daily_Cash_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Daily_Cash_Number__c</fullName>
    <description>Số lần rút tiền mặt/ngày</description>
    <label>Daily Cash Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>