force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>FEC_Date_Assigned__c</fullName>
    <description>Ngày chuyển</description>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>