force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>FEC_Date_of_Birth__c</fullName>
    <description>Ngày sinh</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>