force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Date_of_Issue__c</fullName>
    <description>Ngày cấp</description>
    <inlineHelpText></inlineHelpText>
    <label>Date of Issue</label>
    <type>Date</type>
</CustomField>