force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>FEC_Days_Past_Due__c</fullName>
    <description>Số ngày quá hạn</description>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>