force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Debt_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Debt_Sale_Type__c</fullName>
    <description>Hình thức bán nợ</description>
    <label>Debt Sale Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>