force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Delinquency_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delinquency_Date__c</fullName>
    <description>Ngày quá hạn</description>
    <label>Delinquency Date</label>
    <type>Date</type>
</CustomField>