force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>