force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Description__c</fullName>
    <description>Mô tả lỗi</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>