force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Digital_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Digital_Card_ID__c</fullName>
    <description>Digital Card ID</description>
    <label>Digital Card ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>