force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Disbursement_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disbursement_Channel__c</fullName>
    <description>Kênh giải ngân</description>
    <label>Disbursement Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>