force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disbursement_Date__c</fullName>
    <description>Ngày giải ngân</description>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>