force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_E_Commerce_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_E_Commerce_Status__c</fullName>
    <description>Trạng thái GD trực tuyến</description>
    <label>E-Commerce Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_Inactive</valueSetName>
    </valueSet>
</CustomField>