force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_E_sign_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_E_sign_Status__c</fullName>
    <description>Tình trạng E-sign</description>
    <label>E-sign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>