force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email__c</fullName>
    <description>Thư điện tử</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>