force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Embossing_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Embossing_Name__c</fullName>
    <description>Tên trên thẻ</description>
    <label>Embossing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>