force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_EMI__c.field-meta.xml
<CustomField>
    <fullName>FEC_EMI__c</fullName>
    <description>EMI</description>
    <label>EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>