force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Code__c</fullName>
    <description>Mã lỗi</description>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>