force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Excess_Amount__c</fullName>
    <description>Số tiền dư</description>
    <label>Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>