force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Fast_Cash_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fast_Cash_Status__c</fullName>
    <label>Fast Cash Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>