force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_First_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_First_Effective_Date__c</fullName>
    <description>Ngày phát sinh giao dịch đầu tiên</description>
    <label>First Effective Date</label>
    <type>Date</type>
</CustomField>