force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_First_Name__c</fullName>
    <description>Tên</description>
    <inlineHelpText></inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>