force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_First_Payment_Date__c</fullName>
    <description>Ngày thanh toán đầu tiên</description>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>