force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_First_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_First_Transaction_Amount__c</fullName>
    <description>Giao dịch phát sinh đầu tiên</description>
    <label>First Transaction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>