force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Fraud_Monitor_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fraud_Monitor_Date__c</fullName>
    <description>Ngày khóa/mở khóa GD trực tuyến</description>
    <label>Fraud Monitor Date</label>
    <type>Date</type>
</CustomField>