force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Fraud_Monitor_Flag__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fraud_Monitor_Flag__c</fullName>
    <description>Khóa tính năng GD trực tuyến</description>
    <label>Fraud Monitor Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>