force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Hold_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Hold_Amount__c</fullName>
    <description>Hạn mức đang treo</description>
    <label>Hold Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>