force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_ID__c</fullName>
    <label>ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>