force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Installments_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installments_Overdue__c</fullName>
    <description>Số tiền góp quá hạn</description>
    <label>Installments Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>