force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Installments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installments_Remaining__c</fullName>
    <description>Số kỳ góp còn lại</description>
    <label>Installments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>