force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Insurance_Amount__c</fullName>
    <description>Số tiền bảo hiểm</description>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>