force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Insurance_Flag__c.field-meta.xml
<CustomField>
    <fullName>FEC_Insurance_Flag__c</fullName>
    <description>Bảo hiểm thẻ</description>
    <label>Insurance Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>