force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Interest_On_Termination__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest_On_Termination__c</fullName>
    <description>Lãi kỳ hiện tại</description>
    <label>Interest On Termination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>