force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Interest_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest_Overdue__c</fullName>
    <description>Lãi quá hạn</description>
    <label>Interest Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>