force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Interest_Sold__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest_Sold__c</fullName>
    <description>Số tiền lãi đã bán</description>
    <label>Interest Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>