force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_IPP_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Status__c</fullName>
    <label>IPP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>