force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Is_Top_Up_Account__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Top_Up_Account__c</fullName>
    <description>Là HĐ Top Up</description>
    <label>Is Top Up Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>