force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_Advance_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Advance_Date__c</fullName>
    <description>Ngày ứng tiền gần nhất</description>
    <label>Last Advance Date</label>
    <type>Date</type>
</CustomField>