force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_AF_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_AF_Date__c</fullName>
    <description>Ngày phát sinh phí gần nhất</description>
    <label>Last AF Date</label>
    <type>Date</type>
</CustomField>