force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_Credit_Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Credit_Limit_Date__c</fullName>
    <description>Ngày cập nhật hạn mức</description>
    <label>Last Credit Limit Date</label>
    <type>Date</type>
</CustomField>