force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Effective_Date__c</fullName>
    <description>Ngày giao dịch thành công gần nhất</description>
    <label>Last Effective Date</label>
    <type>Date</type>
</CustomField>