force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Name__c</fullName>
    <description>Họ</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>